theme switcher done

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,61 +27,22 @@ body {
 }
 
 .ProseMirror {
-  > * + * {
-    margin-top: 0.75em;
-  }
+  @apply text-gray-900 dark:text-white min-h-[100px];
+}
 
-  &:focus {
-    outline: none;
-  }
+.ProseMirror p {
+  @apply my-1;
+}
 
-  ul,
-  ol {
-    padding: 0 1rem;
-  }
+.ProseMirror:focus {
+  @apply outline-none;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.1;
-  }
+/* Dark mode specific styles */
+.dark .ProseMirror {
+  @apply text-white;
+}
 
-  code {
-    background-color: rgba(97, 97, 97, 0.1);
-    color: #616161;
-  }
-
-  pre {
-    background: #0D0D0D;
-    color: #FFF;
-    font-family: 'JetBrainsMono', monospace;
-    padding: 0.75rem 1rem;
-    border-radius: 0.5rem;
-
-    code {
-      color: inherit;
-      padding: 0;
-      background: none;
-      font-size: 0.8rem;
-    }
-  }
-
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  blockquote {
-    padding-left: 1rem;
-    border-left: 2px solid rgba(13, 13, 13, 0.1);
-  }
-
-  hr {
-    border: none;
-    border-top: 2px solid rgba(13, 13, 13, 0.1);
-    margin: 2rem 0;
-  }
+.dark .ProseMirror p {
+  @apply text-white;
 }
